# typecast

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parser.rs  playback.rs  pty.rs  types.rs
tree-sitter-typecast/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-typecast/bindings/c/: tree-sitter-typecast.pc.in
tree-sitter-typecast/bindings/go/: binding.go  binding_test.go
tree-sitter-typecast/bindings/node/: binding.cc  index.js
tree-sitter-typecast/bindings/python/tests/: test_binding.py
tree-sitter-typecast/bindings/python/tree_sitter_typecast/: __init__.py  binding.c
tree-sitter-typecast/bindings/rust/: build.rs  lib.rs
tree-sitter-typecast/bindings/swift/TreeSitterTypecast/: typecast.h
tree-sitter-typecast/bindings/swift/TreeSitterTypecastTests/: TreeSitterTypecastTests.swift
tree-sitter-typecast/queries/: highlights.scm  injections.scm  textobjects.scm
tree-sitter-typecast/src/: grammar.json  node-types.json  parser.c
tree-sitter-typecast/test/corpus/: comments.txt  directives.txt  edge_cases.txt  escaped.txt  integration.txt  modifiers.txt  special_keys.txt  type_commands.txt
