[package]
name = "typecast"
version = "0.1.1"
edition = "2024"

[dependencies]
# Error handling
anyhow = "1.0"
# CLI
clap = { version = "4", features = ["derive"] }
# Terminal control
crossterm = "0.29"
# Signal handling
ctrlc = "3.4"
# Parsing
nom = "8.0"
# PTY management
portable-pty = "0.9"
# Random jitter
rand = "0.9"
thiserror = "2.0"
# Async runtime & timing
tokio = { version = "1", features = ["full"] }
